target_link_libraries: Non-existent Apple frameworks ignored
Code referencing non-existent frameworks, such as
add_executable(myexe myexe.c)
target_include_directories(myexe PRIVATE "/path/to/Frameworks/Include/MissingInclude.framework")
target_link_libraries(myexe PRIVATE "/path/to/Frameworks/Library/MissingLibrary.framework")
generates a build system that has -F /path/to/Frameworks/Include
but not -F /path/to/Frameworks/Library
.
Frameworks that do not exist when CMake is generating the build system may be created during the build, e.g. by an ExternalProject, and should therefore be referenced in the generated build system under the assumption that they will exist when needed.