Apple: Fix linking to frameworks that do not exist until build time

Fixes: #21621